runtime/src/test/resources/tests/error/errors_unknown_package.wstl
package errors

buildin::hash("hello");
